# power-aware-module

./: .gitignore  LICENSE  NOTICE  README.md
charts/karman-lab/: Chart.yaml  values-lab-all-kube.yaml  values-lab-external.yaml  values.yaml
charts/karman-lab/files/: timescale-init.sql
charts/karman-lab/templates/: configmap.yaml  data-db-deployment.yaml  data-exporter-daemonset.yaml  data-exporter-service.yaml  data-exporter-servicemonitor.yaml  data-replay-deployment.yaml  grafana-dashboards.yaml  grafana-datasource-timescale.yaml  networkpolicy.yaml  secret-timescale.yaml  timescale-deployment.yaml  timescale-init-configmap.yaml
docker/: Dockerfile.data-db  Dockerfile.data-exporter  Dockerfile.data-replay  README.md
proto/protobuf-rs/: Cargo.toml
proto/protobuf-rs/src/: lib.rs
scripts/: restart-data-flow.sh
services/data-db/: Cargo.toml
services/data-db/src/: main.rs
services/data-exporter/: Cargo.toml
services/data-exporter/src/: data_product_listener.rs  main.rs
services/data-replay/: Cargo.toml
services/data-replay/src/: main.rs
