[package]
name = "data-db"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
prost = "0.14.1"
prost-types = "0.14.1"
zeromq = "0.4.1"
protobuf-rs = { path = "../../proto/protobuf-rs", version = "1.2.1", features = ["utilidata-karman-bibimbap-v1"] }
humantime-serde = "1.1.1"
serde_yaml = "0.9.34"
log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1.0.99"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
chrono = "0.4.41"
clap = { version = "4.5.48", features = ["derive"] }
