[package]
name = "data-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
zeromq = "0.4.1"
protobuf-rs = { path = "../../proto/protobuf-rs", version = "1.2.1", features = ["utilidata-karman-bibimbap-v1"] }
clap = { version = "4.5.47", features = ["derive"] }
prometheus = "0.13"
axum = "0.7"
anyhow = "1.0.99"
prost = "0.14.1"
log = "0.4.28"
env_logger = "0.11.8"
