[package]
name = "data-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
zeromq = "0.4.1"
protobuf-rs = { path = "../../proto/protobuf-rs", version = "1.2.1", features = ["utilidata-karman-bibimbap-v1"] }
prost = "0.14.1"
prost-types = "0.14.1"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

